forgot the html and styles duh

--- a/apps/towersofhanoi/style.css
+++ b/apps/towersofhanoi/style.css
@@ -34,6 +34,11 @@
     background-color: yellow;
 }
 
+#not-allowed {
+    font-size: 50px;
+    text-align: center;
+}
+
 #announce-game-won {
     font-size: 50px;
     text-align: center;
